--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                   <div class="tarjeta__header mb-3">Información del programa</div>
                   <div class="tarjeta__body mb-4">
                     <span class="d-block mb-2">Complementario</span>
-                    <h1>Excel Avanzado: Gestión estratégica de información</h1>
+                    <h1>Excel Avanzado: gestión estratégica de información</h1>
                   </div>
                   <div class="tarjeta__action">
                     <button class="boton video-btn" type="button" data-bs-toggle="modal"
-                      data-src="https://www.youtube.com/embed/56GX3L_OScw?si=PP0EjNxcNtgqRZV8" data-bs-target="#myModal">
+                      data-src="https://www.youtube.com/embed/XKfKt5wdp_U?si=FZZOL2ITi7oXsYFN" data-bs-target="#myModal">
                       <span>Reproducir video</span>
                       <img src="./assets/ico-flecha.svg" />
                     </button>
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="col-lg-auto tarjeta naranja p-0 d-flex justify-content-center">
-            <a href="descargas/Info_Programa_21716121.pdf" target="_blank" class="boton-footer py-4 px-5 button-jittery">
+            <a href="descargas/Info_Programa_21710121.pdf" target="_blank" class="boton-footer py-4 px-5 button-jittery">
               <div class="contenido__footer__item">
                 <div class="contenido__footer__item__img me-3"><img src="./assets/ico-descarga.svg"
                     style="width: 62px" />
